Hide vertical scrollbar to avoid content jumping from page to page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  overflow-y: hidden;
 }
 
 /* Navbar Brand */
